# templated-memmap-register

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  LICENSE  README.md  cpp_hal Debug.launch
Debug/: cpp_hal.elf  cpp_hal.list  cpp_hal.map  makefile  objects.list
Debug/Src/: ADevice.su  ADriver.su  ASensor.su  main.su  subdir.mk  systick.su  usart.su
Debug/Startup/: subdir.mk
Inc/: Register.h  Systick.h
Src/: Systick.cpp  Systick_test.cpp  main.cpp
Startup/: startup_stm32h743zitx.s
app/: CMakeLists.txt
app/api/: app_main.h
app/source/: app_main.cpp  main.cpp
app/tests/: CMakeLists.txt
libs/: CMakeLists.txt
libs/libMmr/: CMakeLists.txt
libs/libMmr/api/: Register.h  mmregister.h
libs/libMmr/docs/: register-class-diagram.puml  req.md
libs/libMmr/tests/: CMakeLists.txt  test_Register.cpp  test_mmregister.cpp
libs/libMmr/tests/mocks/include/: Mock_MMRegister.hpp  Mock_Register.hpp
libs/libSystickDrv/: CMakeLists.txt
libs/libSystickDrv/api/: Systick.h
libs/libSystickDrv/source/: Systick.cpp
libs/libSystickDrv/tests/: CMakeLists.txt  test_systick.cpp
libs/libSystickDrv/tests/mocks/include/: Mock_Systick.h
libs/libSystickDrv/tests/mocks/source/: Mock_Systick.cpp
tools/cmake/modules/: CodeCoverage.cmake  Doxygen.cmake  PlantUml.cmake  Sphinx.cmake
